# Avoid-Trouble

./: .gitignore  CMakeLists.txt  README.md
Avoid-Trouble/: AvoidTrouble.pro  avoidtrouble.cpp  avoidtrouble.h  avoidtrouble.ui  defines.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  safezone.cpp  safezone.h
Game/: Game.pro  defines.h  game.cpp  game.h  game.ui  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  res.qrc  safezone.cpp  safezone.h
src/: CMakeLists.txt  avoidtrouble.cpp  avoidtrouble.h  main.cpp  obstacle.cpp  player.cpp  player.h
src/res/: res.qrc
